[package]
name = "matching-engine"
version = "0.1.0"
authors = ["Christian Hess <christianhess.rlz@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "^0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "^0.4"

[[bin]]
path = "src/cli.rs"
name = "matching-engine-cli"
test = false
bench = false

[[bin]]
path = "src/server.rs"
name = "matching-engine-server"
test = false
bench = false
